tests/machine/x/cobol/map_nested_assign.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:17Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MAP-NESTED-ASSIGN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 DATA.
           05 OUTER-INNER PIC 9 VALUE 1.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE DATA-OUTER-INNER = 2
       COMPUTE TMP = DATA-OUTER-INNER
       DISPLAY TMP
       STOP RUN.
